effects and colors

--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/style.css">
     <title>Mario López Vila Portfolio</title>
 </head>
@@ -10,13 +13,18 @@
     <header>
         <nav class="menu">
             <ul>
-                <li class="menu-item"><a href="">menu item</a></li>
-                <li class="menu-item"><a href="">menu item</a></li>
-                <li class="menu-item-pic"><a href="">pic</a></li>
-                <li class="menu-item"><a href="">menu item</a></li>
-                <li class="menu-item"><a href="">menu item</a></li>
+                <li class="menu-item"><a href="">SOBRE MÍ</a></li>
+                <li class="menu-item"><a href="">PROJECTOS</a></li>
+                <li class="menu-item" id="menu-item-pic">
+                    <img src="images/galaxy.svg" alt="my icon">
+                </li>
+                <li class="menu-item"><a href="">MI CV</a></li>
+                <li class="menu-item"><a href="">CONTACTO</a></li>
             </ul>
+            <hr>
         </nav>
     </header>
+
+
 </body>
 </html>
