--- a/index.html
+++ b/index.html
@@ -39,7 +39,35 @@
         </section>
 
         <section class="projects" id="projects">
-            <p>Aquí van tus proyectos...</p>
+            <article class="project-card">
+                <h2 class="project-title">PROYECTO 1</h2>
+                <img src="images/me.jpeg" alt="" class="project-image">
+                <p class="project-description">SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
+                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                     SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS 
+                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                </p>
+            </article>
+
+            <article class="project-card">
+                <h2 class="project-title">PROYECTO 2</h2>
+                <img src="images/me.jpeg" alt="" class="project-image">
+                <p class="project-description">SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
+                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                     SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS 
+                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                </p>
+            </article>
+
+            <article class="project-card">
+                <h2 class="project-title">PROYECTO 3</h2>
+                <img src="images/me.jpeg" alt="" class="project-image">
+                <p class="project-description">SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
+                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                     SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS 
+                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                </p>
+            </article>
         </section>
         
     </main>
