on click card (no lo haré)

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </section>
 
         <section class="projects" id="projects">
-            <article class="project-card">
+            <article class="project-card" id="project1">
                 <h2 class="project-title">PROYECTO 1</h2>
                 <img src="images/me.jpeg" alt="" class="project-image">
                 <p class="project-description">SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
@@ -49,7 +49,7 @@
                 </p>
             </article>
 
-            <article class="project-card">
+            <article class="project-card" id="project2">
                 <h2 class="project-title">PROYECTO 2</h2>
                 <img src="images/me.jpeg" alt="" class="project-image">
                 <p class="project-description">SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
@@ -59,7 +59,7 @@
                 </p>
             </article>
 
-            <article class="project-card">
+            <article class="project-card" id="project3">
                 <h2 class="project-title">PROYECTO 3</h2>
                 <img src="images/me.jpeg" alt="" class="project-image">
                 <p class="project-description">SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
@@ -68,8 +68,23 @@
                      DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
                 </p>
             </article>
+
+            <article class="card-hidden">
+                <div class="grid-card">
+                    PROYECTO 1
+                </div>
+                <div class="grid-card">
+                    <img src="images/me.jpeg" alt="">
+                </div>
+                <div class="grid-card">
+                    <p>SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
+                        DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                        SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS 
+                        DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                   </p>
+                </div>
+            </article>
         </section>
-        
     </main>
 
     <script src="js.js"></script>
