grid and card expanded + buttons

--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
             </article>
 
             <article class="card-hidden">
+                <button class="button back">
+                    <img src="images/back.ico" alt="">
+                </button>
                 <div class="grid-card">
                     PROYECTO 1
                 </div>
@@ -83,6 +86,9 @@
                         DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
                    </p>
                 </div>
+                <button class="button next">
+                    <img src="images/right.ico" alt="">
+                </button>
             </article>
         </section>
     </main>
