transition on click card and displayed none

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 </p>
             </article>
 
-            <article class="card-hidden">
+            <article class="card-expanded">
                 <button class="button back">
                     <img src="images/back.ico" alt="">
                 </button>
