transition on expanded card in

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li class="menu-item"><a href="#index">INICIO</a></li>
                 <li class="menu-item"><a href="#projects">PROYECTOS</a></li>
                 <li class="menu-item no-hover" id="menu-item-pic">
-                    <img src="images/galaxy.svg" alt="my icon">
+                    <img src="images/M_1.png" alt="my icon">
                 </li>
                 <li class="menu-item"><a href="">MI CV</a></li>
                 <li class="menu-item"><a href="">CONTACTO</a></li>
@@ -38,59 +38,55 @@
             </div>
         </section>
 
+        <hr>
+
         <section class="projects" id="projects">
             <article class="project-card" id="project1">
                 <h2 class="project-title">PROYECTO 1</h2>
                 <img src="images/me.jpeg" alt="" class="project-image">
-                <p class="project-description">SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
-                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
-                     SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS 
-                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                <p class="project-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, reprehenderit perspiciatis? Commodi nemo recusandae incidunt provident molestias? 
                 </p>
             </article>
 
             <article class="project-card" id="project2">
                 <h2 class="project-title">PROYECTO 2</h2>
                 <img src="images/me.jpeg" alt="" class="project-image">
-                <p class="project-description">SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
-                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
-                     SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS 
-                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                <p class="project-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, reprehenderit perspiciatis? Commodi nemo recusandae incidunt provident molestias? 
                 </p>
             </article>
 
             <article class="project-card" id="project3">
                 <h2 class="project-title">PROYECTO 3</h2>
                 <img src="images/me.jpeg" alt="" class="project-image">
-                <p class="project-description">SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
-                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
-                     SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS 
-                     DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
+                <p class="project-description">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, reprehenderit perspiciatis? Commodi nemo recusandae incidunt provident molestias?
                 </p>
             </article>
-
-            <article class="card-expanded">
-                <button class="button back">
-                    <img src="images/back.ico" alt="">
-                </button>
-                <div class="grid-card">
-                    PROYECTO 1
-                </div>
-                <div class="grid-card">
-                    <img src="images/me.jpeg" alt="">
-                </div>
-                <div class="grid-card">
-                    <p>SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS
-                        DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
-                        SDFSLDFNSDFSFSDF SDOFH SDFOSDF OSDFOSFD HOSDFOHSDOFHSDFSDFOSDHF OS 
-                        DOFHSDF OHSDOFHUSDF OHSDFO FOHSDFOHS DFOHUSDFO UIHSDFOSHDF OHS
-                   </p>
-                </div>
-                <button class="button next">
-                    <img src="images/right.ico" alt="">
-                </button>
-            </article>
         </section>
+
+        <article class="card-expanded hidden" id="cardExpanded">
+            <button class="button back" id="buttonBack">
+                <img src="images/back.ico" alt="">
+            </button>
+            <div class="grid-card title">
+                PROYECTO 1
+            </div>
+            <div class="grid-card image">
+                <img src="images/me.jpeg" alt="">
+            </div>
+            <div class="grid-card description">
+                <p class="project-description">ç
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sunt quidem a deserunt odit fugiat totam obcaecati deleniti ut repellendus beatae ducimus nihil praesentium id quaerat quis rerum mollitia, illo maxime corrupti quae fuga eum quasi. Officiis, magnam nobis aut quaerat, autem in aliquid temporibus rerum a animi ipsum quis facilis dolore repudiandae! Amet, modi nesciunt id tempore officia nihil illum sapiente cumque quaerat harum ab atque ut, quidem eligendi facilis enim similique culpa adipisci neque mollitia! Ipsum veniam, ex provident dolor excepturi quas saepe eius laborum aperiam maxime, ut, laboriosam blanditiis repudiandae aliquid a veritatis illum est temporibus dolorum?
+                </p>
+            </div>
+            <button class="button next">
+                <img src="images/next.ico" alt="">
+            </button>
+        </article>
+        <hr>
+
     </main>
 
     <script src="js.js"></script>
