animation on cards and projects expanded in/out + justified initial section

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <section class="about-me" id="index">
             <img src="images/me.svg" alt="">
             <div>
-                <h1 class="text-about-me-title"></h1>
-                <p class="text-about-me"></p>
+                <h1 class="text-about-me-title">SOBRE MÍ:</h1>
+                <p class="text-about-me">Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, reprehenderit perspiciatis? Commodi nemo recusandae incidunt provident molestias? Odio vitae magni unde esse, molestias consequatur earum, animi consectetur saepe libero omnis quaerat praesentium laborum. Magni esse vitae omnis, obcaecati nostrum ducimus recusandae possimus illo ex numquam laborum architecto tempora officia maiores!Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, reprehenderit perspiciatis? Commodi nemo recusandae incidunt provident molestias? Odio vitae magni unde esse, molestias consequatur earum, animi consectetur saepe libero omnis quaerat praesentium laborum. Magni esse vitae omnis, obcaecati nostrum ducimus recusandae possimus illo ex numquam laborum architecto tempora officia maiores!</p>
             </div>
         </section>
 
@@ -42,7 +42,7 @@
         
         <span class="projects-title" id="projects">PROYECTOS</span>
         
-        <section class="projects">
+        <section class="projects" id="projectsSection">
             <article class="project-card" id="project1">
                 <h2 class="project-title">PROYECTO 1</h2>
                 <img src="images/me.svg" alt="" class="project-image">
@@ -68,7 +68,7 @@
             </article>
         </section>
 
-        <article class="card-expanded hidden" id="cardExpanded">
+        <article class="card-expanded" id="cardExpanded">
             <button class="button back" id="buttonBack">
                 <img src="images/back.ico" alt="">
             </button>
