my photo provisional added and modified margins on about-me containers

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <main>
         <section class="about-me" id="index">
-            <img src="images/me.svg" alt="">
+            <img src="images/me.bmp" alt="">
             <div>
                 <h1 class="text-about-me-title"></h1>
                 <p class="text-about-me"></p>
