cv and contct container

--- a/index.html
+++ b/index.html
@@ -91,12 +91,14 @@
 
         <span class="section-title">MI CURRÍCULUM</span>
         <section>
+            <div class="mi-cv"></div>
         </section>
 
         <hr id="contact">
     
         <span class="section-title">CONTACTOS</span>
         <section>
+            <div class="mi-cv"></div>
         </section>
     </main>
 
