cards expanded shown on a container based on its id

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li class="menu-item"><a href="#index">INICIO</a></li>
             <li class="menu-item"><a href="#projects">PROYECTOS</a></li>
             <li class="menu-item no-hover" id="menu-item-pic">
-                <img src="images/M_1.png" alt="my icon">
+                <img src="images/logo.png" alt="my icon">
             </li>
             <li class="menu-item"><a href="#myCv">MI CV</a></li>
             <li class="menu-item"><a href="#contact">CONTACTO</a></li>
@@ -44,7 +44,7 @@
         <section class="projects" id="projectsSection">
             <article class="project-card" id="project1">
                 <h2 class="project-title">PROYECTO 1</h2>
-                <img src="images/me.svg" alt="" class="project-image">
+                <img src="images/try.svg" alt="" class="project-image">
                 <p class="project-description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, reprehenderit perspiciatis? Commodi nemo recusandae incidunt provident molestias? 
                 </p>
@@ -52,7 +52,7 @@
 
             <article class="project-card" id="project2">
                 <h2 class="project-title">PROYECTO 2</h2>
-                <img src="images/me.svg" alt="" class="project-image">
+                <img src="images/try.svg" alt="" class="project-image">
                 <p class="project-description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, reprehenderit perspiciatis? Commodi nemo recusandae incidunt provident molestias? 
                 </p>
@@ -60,32 +60,67 @@
 
             <article class="project-card" id="project3">
                 <h2 class="project-title">PROYECTO 3</h2>
-                <img src="images/me.svg" alt="" class="project-image">
+                <img src="images/try.svg" alt="" class="project-image">
                 <p class="project-description">
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim, reprehenderit perspiciatis? Commodi nemo recusandae incidunt provident molestias?
                 </p>
             </article>
         </section>
 
-        <article class="card-expanded" id="cardExpanded">
+        <section class="card-expanded-container hidden">
+
             <button class="button back" id="buttonBack">
                 <img src="images/back.ico" alt="">
             </button>
-            <div class="grid-card title">
-                <span id="projectExpandedTitle">PROYECTO 1</span>
-            </div>
-            <div class="grid-card image">
-                <img src="images/M_1.png" alt="">
-            </div>
-            <div class="grid-card description">
-                <p class="project-description">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sunt quidem a deserunt odit fugiat totam obcaecati deleniti ut repellendus beatae ducimus nihil praesentium id quaerat quis rerum mollitia, illo maxime corrupti quae fuga eum quasi. Officiis, magnam nobis aut quaerat, autem in aliquid temporibus rerum a animi ipsum quis facilis dolore repudiandae! Amet, modi nesciunt id tempore officia nihil illum sapiente cumque quaerat harum ab atque ut, quidem eligendi facilis enim similique culpa adipisci neque mollitia! Ipsum veniam, ex provident dolor excepturi quas saepe eius laborum aperiam maxime, ut, laboriosam blanditiis repudiandae aliquid a veritatis illum est temporibus dolorum?
-                </p>
-            </div>
+
+            <article class="card-expanded" id="cardExpanded1">
+                <div class="grid-card title">
+                    <span>PROYECTO 1</span>
+                </div>
+                <div class="grid-card image">
+                    <img src="images/logo.png" alt="">
+                </div>
+                <div class="grid-card description">
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sunt quidem a deserunt odit fugiat totam obcaecati deleniti ut repellendus beatae ducimus nihil praesentium id quaerat quis rerum mollitia, illo maxime corrupti quae fuga eum quasi. Officiis, magnam nobis aut quaerat, autem in aliquid temporibus rerum a animi ipsum quis facilis dolore repudiandae! Amet, modi nesciunt id tempore officia nihil illum sapiente cumque quaerat harum ab atque ut, quidem eligendi facilis enim similique culpa adipisci neque mollitia! Ipsum veniam, ex provident dolor excepturi quas saepe eius laborum aperiam maxime, ut, laboriosam blanditiis repudiandae aliquid a veritatis illum est temporibus dolorum?
+                    </p>
+                </div>
+            </article>
+
+            <article class="card-expanded" id="cardExpanded2">
+                <div class="grid-card title">
+                    <span>PROYECTO 2</span>
+                </div>
+                <div class="grid-card image">
+                    <img src="images/logo.png" alt="">
+                </div>
+                <div class="grid-card description">
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sunt quidem a deserunt odit fugiat totam obcaecati deleniti ut repellendus beatae ducimus nihil praesentium id quaerat quis rerum mollitia, illo maxime corrupti quae fuga eum quasi. Officiis, magnam nobis aut quaerat, autem in aliquid temporibus rerum a animi ipsum quis facilis dolore repudiandae! Amet, modi nesciunt id tempore officia nihil illum sapiente cumque quaerat harum ab atque ut, quidem eligendi facilis enim similique culpa adipisci neque mollitia! Ipsum veniam, ex provident dolor excepturi quas saepe eius laborum aperiam maxime, ut, laboriosam blanditiis repudiandae aliquid a veritatis illum est temporibus dolorum?
+                    </p>
+                </div>
+            </article>
+
+            <article class="card-expanded" id="cardExpanded3">
+                <div class="grid-card title">
+                    <span>PROYECTO 3</span>
+                </div>
+                <div class="grid-card image">
+                    <img src="images/logo.png" alt="">
+                </div>
+                <div class="grid-card description">
+                    <p class="project-description">
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Incidunt sunt quidem a deserunt odit fugiat totam obcaecati deleniti ut repellendus beatae ducimus nihil praesentium id quaerat quis rerum mollitia, illo maxime corrupti quae fuga eum quasi. Officiis, magnam nobis aut quaerat, autem in aliquid temporibus rerum a animi ipsum quis facilis dolore repudiandae! Amet, modi nesciunt id tempore officia nihil illum sapiente cumque quaerat harum ab atque ut, quidem eligendi facilis enim similique culpa adipisci neque mollitia! Ipsum veniam, ex provident dolor excepturi quas saepe eius laborum aperiam maxime, ut, laboriosam blanditiis repudiandae aliquid a veritatis illum est temporibus dolorum?
+                    </p>
+                </div>
+            </article>
+
             <button class="button next">
                 <img src="images/next.ico" alt="">
             </button>
-        </article>
+
+        </section>
+
         
         <hr id="myCv">
 
