--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </div>
             </article>
 
-            <button class="button next">
+            <button class="button next" id="buttonNext">
                 <img src="images/next.ico" alt="">
             </button>
 
